[gd_scene load_steps=4 format=3 uid="uid://b8k4v2n1x7m9s"]

[ext_resource type="Script" path="res://scripts/systems/MainMenu.gd" id="1_3m8kx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.15, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.6, 0.8, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Theme" id="Theme_1"]
Button/styles/normal = SubResource("StyleBoxFlat_1")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_3m8kx")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.1, 1)

[node name="BackgroundParticles" type="CPUParticles2D" parent="."]
position = Vector2(960, 0)
emitting = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
theme_override_constants/separation = 40

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "ASHES OF REVERIE"
horizontal_alignment = 1

[node name="TitleParticles" type="CPUParticles2D" parent="VBoxContainer"]
position = Vector2(300, 36)
emitting = false

[node name="SubtitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Embrace the Dream, Defy the Nightmare"
horizontal_alignment = 1

[node name="MenuButtons" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="StartButton" type="Button" parent="VBoxContainer/MenuButtons"]
layout_mode = 2
theme = SubResource("Theme_1")
theme_override_font_sizes/font_size = 32
text = "Begin Journey"

[node name="OptionsButton" type="Button" parent="VBoxContainer/MenuButtons"]
layout_mode = 2
theme = SubResource("Theme_1")
theme_override_font_sizes/font_size = 32
text = "Settings"

[node name="QuitButton" type="Button" parent="VBoxContainer/MenuButtons"]
layout_mode = 2
theme = SubResource("Theme_1")
theme_override_font_sizes/font_size = 32
text = "Abandon Hope"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]